--- a/public/landing.html
+++ b/public/landing.html
@@ -223,7 +223,7 @@
 	<br>
 	<section class="logos">
 		<div class="contenedor">
-			<ul>
+			<ul class="border_top">
 				<li><img src="img/logos/Gobernacion_de_boyaca2.png" alt=""></li>
 				<li><img src="img/logos/fedelco.png" alt=""></li>
 				<li><img src="img/logos/supersalud2_copia.png" alt=""></li>
