--- a/public/plantilla2.html
+++ b/public/plantilla2.html
@@ -84,7 +84,7 @@
 		<nav class="menu_lateral">
 			<ul>
 				<li>
-					<a class="active" href="#">Planeación Estratégica</a>
+					<a href="#">Planeación Estratégica</a>
 				</li>
 				<li>
 					<a href="#">Reseña histórica</a>
@@ -102,7 +102,7 @@
 					<a href="#">Sedes</a>
 				</li>
 				<li>
-					<a href="#">Planeación</a>
+					<a class="active" href="#">Planeación</a>
 				</li>
 				<li>
 					<a href="#">Control Interno</a>
@@ -125,40 +125,61 @@
 			</ul>
 		</nav>
 		<article class="contenido">
-			<h1>PLANEACIÓN ESTRATÉGICA</h1>
+			<h1>PLANEACIÓN</h1>
 			<div class="fondo_gris">
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
+				<p>Esta Documentación puede ser de su interés,</p>
+				<p>para descargarla haga clic en el vínculo correspondiente:</p>
+				<br>
+				<h3>Documentos de Descarga</h3>
+                <br>
+				<div class="archivos_descarga">
+					<div class="archivos">
+						<span class="documento">
+							<span class="doc_titulo inline_block">Informe de Control Interno Periodo Julio - Noviembre de 2012</span>
+							<span class="inline_block btn_descarga">
+								<a href="#">
+									<img src="img/flecha_abajo.png" alt="">
+								</a>
+							</span>
+						</span>
+						<span class="documento">
+							<span class="doc_titulo inline_block">Plan de Desarrollo Institucional</span>
+							<span class="inline_block btn_descarga">
+								<a href="#">
+									<img src="img/flecha_abajo.png" alt="">
+								</a>
+							</span>
+						</span>
+						<span class="documento">
+							<span class="doc_titulo inline_block">Plan Departamental de Desarrollo 2012 - 2015</span>
+							<span class="inline_block btn_descarga">
+								<a href="#">
+									<img src="img/flecha_abajo.png" alt="">
+								</a>
+							</span>
+						</span>
+						<span class="documento">
+							<span class="doc_titulo inline_block">Plan Indicativo Institucional a Diciembre 2012</span>
+							<span class="inline_block btn_descarga">
+								<a href="#">
+									<img src="img/flecha_abajo.png" alt="">
+								</a>
+							</span>
+						</span>
+						<span class="documento">
+							<span class="doc_titulo inline_block">Rendición Pública de Cuentas 2012</span>
+							<span class="inline_block btn_descarga">
+								<a href="#">
+									<img src="img/flecha_abajo.png" alt="">
+								</a>
+							</span>
+						</span>
+						<span class="documento"></span>
 					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
+					<div class="links_archivos">
 
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
 					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
-
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
-					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
+				</div>
 			</div>
 		</article>
 	</section>
