--- a/public/plantilla3.html
+++ b/public/plantilla3.html
@@ -84,10 +84,10 @@
 		<nav class="menu_lateral">
 			<ul>
 				<li>
-					<a class="active" href="#">Planeación Estratégica</a>
+					<a href="#">Planeación Estratégica</a>
 				</li>
 				<li>
-					<a href="#">Reseña histórica</a>
+					<a class="active" href="#">Reseña histórica</a>
 				</li>
 				<li>
 					<a href="#">Talento Humano</a>
@@ -125,40 +125,26 @@
 			</ul>
 		</nav>
 		<article class="contenido">
-			<h1>PLANEACIÓN ESTRATÉGICA</h1>
+			<h1>RESEÑA HISTÓRICA</h1>
 			<div class="fondo_gris">
 				<article>
-					<h2>Misión</h2>
+					
 					<div class="centrado">
 						<img src="img/loteria.jpg" alt="">
 					</div>
 					<br>
 					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
+						La Lotería y Beneficencia de Boyacá fue creada mediante ordenanza número 061 del 3 de mayo de 1923, como una empresa comercial del departamento de Boyacá, con personería jurídica, autonomía administrativa y patrimonio independiente, sujeta al derecho privado en cuanto a sus actos propios de la actividad comercial y al derecho público en cuanto al ejercicio de sus funciones administrativas.
+                        <br><br>
+Mediante ordenanza número 0022 del 22 de noviembre de 1963 cambio su razón social a Beneficencia de Boyacá. Con el decreto número 328 del 17 de mayo de 1968 se fusionó la Beneficencia con la Lotería de Boyacá, acto que se anulo mediante sentencia del 23 de abril de 1979.
+                        <br><br>
+Mediante decreto número 1236 del 9 de septiembre de 1992 se le confirió facultades para llevar a cabo la reorganización administrativa y adopto el nombre de Instituto de Beneficencia y Lotería de Boyacá, como un establecimiento público descentralizado que forma parte del sistema departamental de salud, adscrito al despacho del secretario de hacienda, encaminando su objetivo hacia la consecución de recursos económicos para dirigirlos en pro de la seguridad integral de los Boyacenses. Con el decreto número 001501 del 27 de diciembre de 1995, el Gobernador de Boyacá reestructura, este instituto, buscando mejorar la eficiencia y la eficacia al momento de cumplir con sus objetivos y funciones.
 					</span>
 				</article>
-
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
-					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
-
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
-					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
+                <div class="btn_volver">
+                    
+                    <a href="#"><img src="img/icon_volver.png"> Volver</a>
+                </div>
 			</div>
 		</article>
 	</section>
