--- a/public/plantilla4.html
+++ b/public/plantilla4.html
@@ -9,7 +9,8 @@
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Signika:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
-
+    <!--Iconos-->
+    <link href="css/bootstrap_iconos.min.css" rel="stylesheet" type="text/css">
 	<title>Lotería</title>
 </head>
 <body>
@@ -84,10 +85,10 @@
 		<nav class="menu_lateral">
 			<ul>
 				<li>
-					<a class="active" href="#">Planeación Estratégica</a>
+					<a href="#">Planeación Estratégica</a>
 				</li>
 				<li>
-					<a href="#">Reseña histórica</a>
+					<a class="active" href="#">Reseña histórica</a>
 				</li>
 				<li>
 					<a href="#">Talento Humano</a>
@@ -125,40 +126,58 @@
 			</ul>
 		</nav>
 		<article class="contenido">
-			<h1>PLANEACIÓN ESTRATÉGICA</h1>
+			<h1>DIRECTORIO FUNCIONARIOS</h1>
 			<div class="fondo_gris">
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
-					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
-
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
-					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
-
-				<article>
-					<h2>Misión</h2>
-					<div class="centrado">
-						<img src="img/loteria.jpg" alt="">
-					</div>
-					<br>
-					<span class="texto">
-						La Lotería de Boyacá tiene como misión, generar recursos económicos con responsabilidad social, para contribuir a la financiación de los servicios de salud y al bienestar de nuestros clientes, mediante la operación y comercialización transparente y eficaz del monopolio de arbitrio rentístico Departamental de juegos de suerte y azar, con un equipo de personas altamente comprometidas, procesos de calidad y mejoramiento continuo.
-					</span>
-				</article>
+                <article class="borde_inferior">
+                    <img class="img_usuario" src="img/usuarios/25.jpg" alt="Usuario">
+                    <div class="info_usuario">
+                        <h3>Gerente general</h3>
+                        <h4>ALFONSO MIGUEL SILVA PESCA</h4>
+                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                        gerencia@loteriadeboyaca.gov.co
+                        <br>
+                        <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
+                        098-7405588
+                    </div>
+                </article>
+                <article class="borde_inferior">
+                    <img class="img_usuario" src="img/usuarios/25.jpg" alt="Usuario">
+                    <div class="info_usuario">
+                        <h3>Gerente general</h3>
+                        <h4>ALFONSO MIGUEL SILVA PESCA</h4>
+                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                        gerencia@loteriadeboyaca.gov.co
+                        <br>
+                        <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
+                        098-7405588
+                    </div>
+                </article>
+                <article class="borde_inferior">
+                    <img class="img_usuario" src="img/usuarios/25.jpg" alt="Usuario">
+                    <div class="info_usuario">
+                        <h3>Gerente general</h3>
+                        <h4>ALFONSO MIGUEL SILVA PESCA</h4>
+                        <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                        gerencia@loteriadeboyaca.gov.co
+                        <br>
+                        <span class="glyphicon glyphicon-earphone" aria-hidden="true"></span>
+                        098-7405588
+                    </div>
+                </article>
+                <div class="inline_block paginador">
+                    <a href="#"><h3 class="inline_block">&#60;</h3></a>
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                    <a href="#">4</a>
+                    <a href="#">5</a>
+                    <a href="#">6</a>
+                    <a href="#">7</a>
+                    <a href="#"> <h3 class="inline_block">&#62;</h3></a>
+                </div>
+                <div class="inline_block btn_volver">
+                    <a href="#"><img src="img/icon_volver.png"> Volver</a>
+                </div>
 			</div>
 		</article>
 	</section>
