--- a/public/landing.html
+++ b/public/landing.html
@@ -163,35 +163,35 @@
 			</div>
 		</div>
 		<div class="contenedor">
-			<div class="columna_3">
+			<div class="columna_3 ">
 				<br>
 				<img src="img/img_padre.jpg" alt="">
 				<h2 class="fecha">25 / 07 / 2014</h2>
-				<div class="titulo_noticia">
+				<div class="titulo_noticia padding_25 justificado">
 					Lotería de Boyacá y Jer entregan equipo de cocina en Fundación Milagros de Amor
 				</div>
-				<div class="contenido_noticia">
+				<div class="contenido_noticia padding_25 justificado">
 					Este servirá para continuar la labor de la Hermanas de Nuestra Sra. Del Silencio para velar por la protección y la educación de más de 30 niñas que allí asisten
 				</div>
-				<a class="boton_noticia" href="#">Ver más</a>
+				<a class="boton_noticia margin_right_15" href="#">Ver más</a>
 			</div>
-			<div class="columna_3">
+			<div class="columna_3 ">
 				<br>
 				<img src="img/img_padre.jpg" alt="">
 				<h2 class="fecha">25 / 07 / 2014</h2>
-				<div class="titulo_noticia">
+				<div class="titulo_noticia padding_25 justificado">
 					Lotería de Boyacá y Jer entregan equipo de cocina en Fundación Milagros de Amor
 				</div>
-				<div class="contenido_noticia">
+				<div class="contenido_noticia padding_25 justificado">
 					Este servirá para continuar la labor de la Hermanas de Nuestra Sra. Del Silencio para velar por la protección y la educación de más de 30 niñas que allí asisten
 				</div>
-				<a class="boton_noticia" href="#">Ver más</a>
+				<a class="boton_noticia margin_right_15" href="#">Ver más</a>
 			</div>
 			<div class="columna_3 border_left padding">
 				<br>
 				<div class="anuncio_noticia">
-					<h2 class="fecha">25 / 07 / 2014</h2>
-					<div class="titulo_noticia">
+					<h2 class="fecha justificado">25 / 07 / 2014</h2>
+					<div class="titulo_noticia justificado">
 						Lotería de Boyacá y Jer entregan equipo de cocina en Fundación Milagros de Amor
 					</div>
 					<div class="contenido_noticia">
@@ -200,8 +200,8 @@
 					<a class="boton_noticia" href="#">Ver más</a>
 				</div>
 				<div class="anuncio_noticia">
-					<h2 class="fecha">25 / 07 / 2014</h2>
-					<div class="titulo_noticia">
+					<h2 class="fecha justificado">25 / 07 / 2014</h2>
+					<div class="titulo_noticia justificado">
 						Lotería de Boyacá y Jer entregan equipo de cocina en Fundación Milagros de Amor
 					</div>
 					<div class="contenido_noticia">
