--- a/public/plantilla5.html
+++ b/public/plantilla5.html
@@ -522,7 +522,7 @@
 
 	<section class="enlaces">
 		<br>
-		<div class="contenedor">
+		<div class="contenedor ">
 			<article class="margin_top_50 columna_3">
 				<p>Disfruta Nuestro</p>
 				<p class="mayuscula_negrilla">Sorteo en vivo</p>
@@ -617,10 +617,10 @@
 				<br>
 				<span class="etiqueta">Síguenos</span>
 				<div class="redes_sociales">
-					<img src="img/social/facebook.png">
-					<img src="img/social/twitter.png">
-					<img src="img/social/youtube.png">
-					<img src="img/social/livestream.png">
+					<a href="#"><img src="img/social/facebook.png"></a>
+					<a href="#"><img src="img/social/twitter.png"></a>
+					<a href="#"><img src="img/social/youtube.png"></a>
+					<a href="#"><img src="img/social/livestream.png"></a>
 				</div>
 			</div>
 		</footer>
