--- a/public/plantilla7.html
+++ b/public/plantilla7.html
@@ -4,12 +4,13 @@
 	<meta charset="utf-8">
 	<!--Estilos-->
 	<link rel="stylesheet" type="text/css" href="css/estilo_base.css">
-	<link rel="stylesheet" type="text/css" href="css/estilo.css">
+	<link rel="stylesheet" type="text/css" href="css/estilo_plantilla_1.css">
 	<!--Fuentes-->
 	<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Signika:300' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Bree+Serif' rel='stylesheet' type='text/css'>
-
+    <!--Iconos-->
+    <link href="css/bootstrap_iconos.min.css" rel="stylesheet" type="text/css">
 	<title>Lotería</title>
 </head>
 <body>
@@ -78,6 +79,52 @@
 	</header>
 
 	<!-- /////////////////// Contenido ////////////////////////-->
+	<br>
+	<br>
+	<section class="contenedor">
+		<nav class="menu_lateral">
+			<ul>
+				<li>
+					<a href="#">Resultados</a>
+				</li>
+				<li>
+					<a href="#">Plan de Premios</a>
+				</li>
+				<li>
+					<a href="#">Cómo cobrar los premios</a>
+				</li>
+				<li>
+					<a href="#">Calendario de Sorteos 2015</a>
+				</li>
+				<li>
+					<a class="active"  href="#">Estadísticas</a>
+				</li>
+				<li>
+					<a href="#">Promocional</a>
+				</li>
+			</ul>
+		</nav>
+		<article class="contenido">
+			<h1>ESTADÍSTICAS</h1>
+            
+            <div class="fondo_gris">
+                <article>
+                    <h2>Premios en poder del público 2011</h2>
+                    <span>
+                    La Lotería de Boyacá en promedio entrega cada sábado más de 350 millones en premios a sus fieles compradores , los invitamos a que sigan comprando y ganando con la Lotería de Boyacá, en este 2011 han caído premios en poder del público por más de $21.872 millones.
+                    </span>
+                    <br><br>
+                    <span>
+                        Con estos resultados podemos decir que con el  Nuevo Plan de Premios de la Lotería de Boyacá es mucho más fácil ganar además que ha sido muy bien acogido por nuestros distribuidores, vendedores y clientes  en todo el territorio nacional.
+                    </span>
+                </article>
+              
+                 <div class="btn_volver">
+                    <a href="#"><img src="img/icon_volver.png"> Volver</a>
+                 </div>
+			</div>
+		</article>
+	</section>
 
 	<section class="enlaces">
 		<br>
