--- a/public/plantilla12.html
+++ b/public/plantilla12.html
@@ -127,8 +127,70 @@
                     	</button>
                		</div>
                	</div>
-                 
-
+                 <br>
+				<div>
+					<table class="tabla_premios tabla_contratos">
+						<tr>
+							<th class="verde_medio border_izquierda">Ver</th>
+							<th class="verde_claro">Código</th>
+							<th class="verde_medio">Apertura</th>
+							<th class="verde_oscuro">Tipo Contrato</th>
+							<th class="verde_claro">Contratación</th>
+							<th class="verde_medio">Valor</th>
+							<th class="border_derecha verde_oscuro">Estado</th>
+						</tr>
+						<tr>
+							<td><a href="#"><img src="img/icono_mas.svg" alt="Ver"></a></td>
+							<td>CONVOCATORIA PÚBLICA SAMN NRO. 026 DE 2014</td>
+							<td>16/oct/2014 17:40:00</td>
+							<td>OTRO TIPO DE CONTRATO</td>
+							<td>SELECCION ABREVIADA POR EL PROCEDIMIENTO DE MENOR CUANTIA</td>
+							<td>$ 117,390,287</td>
+							<td>BORRADOR - PRE TERMINO</td>
+						</tr>
+						<tr>
+							<td><a href="#"><img src="img/icono_mas.svg" alt="Ver"></a></td>
+							<td>CONVOCATORIA PÚBLICA SAMN NRO. 026 DE 2014</td>
+							<td>16/oct/2014 17:40:00</td>
+							<td>OTRO TIPO DE CONTRATO</td>
+							<td>SELECCION ABREVIADA POR EL PROCEDIMIENTO DE MENOR CUANTIA</td>
+							<td>$ 117,390,287</td>
+							<td>BORRADOR - PRE TERMINO</td>
+						</tr>
+						<tr>
+							<td><a href="#"><img src="img/icono_mas.svg" alt="Ver"></a></td>
+							<td>CONVOCATORIA PÚBLICA SAMN NRO. 026 DE 2014</td>
+							<td>16/oct/2014 17:40:00</td>
+							<td>OTRO TIPO DE CONTRATO</td>
+							<td>SELECCION ABREVIADA POR EL PROCEDIMIENTO DE MENOR CUANTIA</td>
+							<td>$ 117,390,287</td>
+							<td>BORRADOR - PRE TERMINO</td>
+						</tr>
+						<tr>
+							<td><a href="#"><img src="img/icono_mas.svg" alt="Ver"></a></td>
+							<td>CONVOCATORIA PÚBLICA SAMN NRO. 026 DE 2014</td>
+							<td>16/oct/2014 17:40:00</td>
+							<td>OTRO TIPO DE CONTRATO</td>
+							<td>SELECCION ABREVIADA POR EL PROCEDIMIENTO DE MENOR CUANTIA</td>
+							<td>$ 117,390,287</td>
+							<td>BORRADOR - PRE TERMINO</td>
+						</tr>
+						<tr>
+							<td class="border_abajo_izquierda">
+								<a href="#">
+									<img src="img/icono_mas.svg" alt="Ver">
+								</a>
+							</td>
+							<td>CONVOCATORIA PÚBLICA SAMN NRO. 026 DE 2014</td>
+							<td>16/oct/2014 17:40:00</td>
+							<td>OTRO TIPO DE CONTRATO</td>
+							<td>SELECCION ABREVIADA POR EL PROCEDIMIENTO DE MENOR CUANTIA</td>
+							<td>$ 117,390,287</td>
+							<td class="border_abajo_derecha">BORRADOR - PRE TERMINO</td>
+						</tr>
+					</table>
+				</div>
+                <br>
                  <div class="inline_block paginador">
                     <a href="#"><h3 class="inline_block">&#60;</h3></a>
                     <a href="#">1</a>
