--- a/public/plantilla5.html
+++ b/public/plantilla5.html
@@ -130,7 +130,7 @@
                     <span class="font_size">$ 3.000 Millones</span>
                 </div>
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Premio</th>
                             <th class="gris_claro">Ganador</th>
@@ -157,7 +157,7 @@
                     <span class="font_size">$ 200 Millones</span>
                 </div>
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Premio</th>
                             <th class="gris_claro">Ganador</th>
@@ -184,7 +184,7 @@
                     <span class="font_size">$ 50 Millones</span>
                 </div>
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Premio</th>
                             <th class="gris_claro">Ganador</th>
@@ -212,7 +212,7 @@
                     <span class="font_size">$ 20 Millones</span>
                 </div>
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Premio</th>
                             <th class="gris_claro">Ganador</th>
@@ -291,7 +291,7 @@
                     <span class="font_size">$ 10 Millones</span>
                 </div>
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Premio</th>
                             <th class="gris_claro">Ganador</th>
