--- a/public/plantilla6.html
+++ b/public/plantilla6.html
@@ -112,7 +112,7 @@
             <div class="margin_boottom_35">
 
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Cantidad</th>
                             <th class="gris_claro">Tipo de premio</th>
@@ -161,7 +161,7 @@
                     <span class="font_size">Con Serie</span>
                 </div>
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Cantidad</th>
                             <th class="gris_claro">Tipo de premio</th>
@@ -210,7 +210,7 @@
                     <span class="font_size">Sin Serie</span>
                 </div>
                 <div class="sombra_tabla">
-                    <table class="tabla_premios">
+                    <table class="tabla_premios th_blanco">
                         <tr>
                             <th class="gris_oscuro border_izquierda">Cantidad</th>
                             <th class="gris_claro">Tipo de premio</th>
